# tradingflow-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  MEMORY.md  README.md  docker-compose.yml  nginx.conf  project_overview.md  pyproject.toml  report_output.md  requirements.txt  restart.sh  run.bat  run.sh  setup.bat  setup.sh  start.sh  stop.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
backend/: cli.py  main.py
backend/agents/: base.py  fundamental.py  generic.py  hot_money.py  macro.py  models.py  news.py  quant.py  registry.py  risk.py  sector_rotation.py  sentiment.py  summarizer.py  technical.py  trading.py
backend/core/: analysis_service.py  cache.py  config.py  config_writer.py  custom_store.py  database.py  discovery.py  exceptions.py  feature_flags.py  limiter.py  llm.py  locale.py  parsing.py  scheduler.py  skill_manager.py  token_tracker.py  watchlist.py
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
scripts/: chaos_test.py
tests/: conftest.py  test_adapters.py  test_agent_models.py  test_agents.py  test_analysis_api.py  test_cache.py  test_config.py  test_database.py  test_events_security.py  test_exceptions.py  test_graph_builder.py  test_graph_state.py  test_llm.py  test_locale.py  test_parsing.py  test_plugin_system.py  test_providers.py  test_report.py  test_repositories.py  test_scheduler.py  test_skills.py  test_trading.py  test_v2_workflow.py  test_watchlist.py
(+137 files in other folders)
