[project]
name = "tradingflow-agent"
version = "0.1.0"
description = "Multi-agent stock analysis system powered by LangGraph"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "typer>=0.15.0",
    "rich>=14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.1.0",
    "akshare>=1.16.0",
    "yfinance>=0.2.50",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "httpx>=0.28.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]

[project.scripts]
tradingflow = "backend.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["backend"]
